--- a/roles/role.android06.wireguard/templates/nginx-site.j2
+++ b/roles/role.android06.wireguard/templates/nginx-site.j2
@@ -1,8 +1,10 @@
 server {
-    # server block for {{ wgui_server_name }}
+    # server block for wireguard-ui
     listen 80;
     listen [::]:80;
+    {% if wgui_server_name is defined %}
     server_name {{ wgui_server_name }};
+    {% endif %}
     proxy_buffering off;
     location / {
         proxy_pass http://127.0.0.1:5000/;
