--- a/roles/role.android06.wireguard/templates/wgui-restart.service.j2
+++ b/roles/role.android06.wireguard/templates/wgui-restart.service.j2
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl restart wg-quick@{{ wireguard_interface }}.service
+ExecStart=/bin/sh -c 'systemctl restart wg-quick@{{ wireguard_interface }}.service'
 
 [Install]
 RequiredBy=wgui.path
